# GitGold

./: Cargo.toml  GitCoin.txt  README.md
crates/gitgold-challenge/: Cargo.toml
crates/gitgold-challenge/benches/: challenge_bench.rs
crates/gitgold-challenge/src/: challenge.rs  proof.rs  validator.rs
crates/gitgold-core/: Cargo.toml
crates/gitgold-core/src/: config.rs  types.rs
crates/gitgold-crypto/: Cargo.toml
crates/gitgold-crypto/benches/: field_bench.rs  shamir_bench.rs
crates/gitgold-crypto/src/: hash.rs  keys.rs  shamir.rs  wallet.rs
crates/gitgold-ledger/: Cargo.toml
crates/gitgold-ledger/benches/: merkle_bench.rs
crates/gitgold-ledger/src/: balance.rs  merkle.rs  store.rs  supply.rs  transaction.rs
crates/gitgold-storage/: Cargo.toml
crates/gitgold-storage/benches/: chunk_bench.rs
crates/gitgold-storage/src/: db.rs
src/: lib.rs
tests/: integration_test.rs
