[workspace]
resolver = "2"
members = [
    "crates/gitgold-core",
    "crates/gitgold-crypto",
    "crates/gitgold-storage",
    "crates/gitgold-ledger",
    "crates/gitgold-challenge",
]

[workspace.dependencies]
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
proptest = "1.4"

# Root package for integration tests
[package]
name = "gitgold"
version = "0.1.0"
edition = "2021"

[dependencies]
gitgold-core = { path = "crates/gitgold-core" }
gitgold-crypto = { path = "crates/gitgold-crypto" }
gitgold-storage = { path = "crates/gitgold-storage" }
gitgold-ledger = { path = "crates/gitgold-ledger" }
gitgold-challenge = { path = "crates/gitgold-challenge" }
serde_json = { workspace = true }
hex = { workspace = true }
