[package]
name = "gitgold-challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
gitgold-core = { path = "../gitgold-core" }
gitgold-crypto = { path = "../gitgold-crypto" }
gitgold-storage = { path = "../gitgold-storage" }
gitgold-ledger = { path = "../gitgold-ledger" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "challenge_bench"
harness = false
