[package]
name = "gitgold-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
gitgold-core = { path = "../gitgold-core" }
gitgold-crypto = { path = "../gitgold-crypto" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
